posts: Set up static files.

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ DEBUG=True
 TEMPLATE_DEBUG=True
 SECRET_KEY='abc-123'
 ALLOWED_HOSTS='*'
-STATIC_FILES_URL='absolute/path/to/static/files/dir/'
+STATIC_FILES_URL='/static/'
+UPLOAD_FILES_URL='/absolute/url/to/uploaded/assets/'
