--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,23 @@ services:
       - .:/app
     ports:
       - "8000:8000"
+  
+  bash:
+    image: python:3
+    entrypoint: /bin/bash
+    working_dir: /app
+    volumes:
+      - .:/app
 
   node:
     image: node:14.15-alpine
+    working_dir: /app
+    volumes:
+      - .:/app
+
+  npm:
+    image: node:14.15-alpine
+    entrypoint: npm
     working_dir: /app
     volumes:
       - .:/app
