--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .vagrant
 node_modules/
 
+*.bundle.css
+*.bundle.js
+
 # @SEE: https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
 
 # Byte-compiled / optimized / DLL files
