--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:watch": "webpack --config ./client/webpack/dev.js --watch",
     "build:dist": "webpack --config ./client/webpack/dist.js",
     "typecheck": "tsc --noEmit",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "lint": "eslint ./client/** --ext .js,.jsx,.ts,.tsx"
   },
   "author": "Jon Richards",
   "license": "UNLICENSED",
@@ -17,8 +18,13 @@
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "^7.13.0",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.1",
+    "eslint": "^7.24.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-webpack-plugin": "^2.5.3",
     "lit-element": "^2.4.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^1.4.1",
