--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "description": "A simple blog for documenting my exploration into the world of technical artists.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build:dev": "webpack --config ./client/webpack/dev.js",
     "build:watch": "webpack --config ./client/webpack/dev.js --watch",
     "build:dist": "webpack --config ./client/webpack/dist.js",
     "typecheck": "tsc --noEmit",
     "tsc": "tsc",
-    "lint": "stylelint **/*.scss && eslint ./client/** --ext .js,.jsx,.ts,.tsx"
+    "lint": "stylelint **/*.scss && eslint ./client/** --ext .js,.jsx,.ts,.tsx",
+    "ts-jest": "ts-jest"
   },
   "author": "Jon Richards",
   "license": "UNLICENSED",
@@ -18,6 +19,7 @@
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "babel-loader": "^8.2.2",
@@ -25,6 +27,7 @@
     "eslint": "^7.24.0",
     "eslint-config-google": "^0.14.0",
     "eslint-webpack-plugin": "^2.5.3",
+    "jest": "^26.6.3",
     "lit-element": "^2.4.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^1.4.1",
@@ -34,6 +37,7 @@
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
     "stylelint-webpack-plugin": "^2.1.1",
+    "ts-jest": "^26.5.4",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.4",
     "webpack": "^5.31.2",
