--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,7 @@
 {
-  "extends": "stylelint-config-recommended"
+  "extends": "stylelint-config-recommended",
+  "rules": {
+    "no-duplicate-selectors": null,
+    "at-rule-no-unknown": null,
+  }
 }
