--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "style-loader": "^2.0.0",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
+    "stylelint-scss": "^3.19.0",
     "stylelint-webpack-plugin": "^2.1.1",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.1.0",
