--- a/.stylelintrc
+++ b/.stylelintrc
@@ -3,5 +3,7 @@
   "rules": {
     "no-duplicate-selectors": null,
     "at-rule-no-unknown": null,
+    "selector-type-no-unknown": null,
+    "no-descending-specificity": null,
   }
 }
