--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-webpack-plugin": "^2.5.3",
     "jest": "^26.6.3",
-    "lit-element": "^2.4.0",
+    "lit": "^2.0.0-rc.2",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^1.4.1",
     "sass": "^1.32.8",
