--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "A simple blog for documenting my exploration into the world of technical artists.",
   "scripts": {
-    "test": "jest",
+    "test": "npm run build:dev && jest",
     "build:dev": "webpack --config ./client/webpack/dev.js",
     "build:watch": "webpack --config ./client/webpack/dev.js --watch",
     "build:dist": "webpack --config ./client/webpack/dist.js",
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "^7.13.0",
     "@types/jest": "^26.0.22",
+    "@types/puppeteer": "^5.4.4",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "babel-loader": "^8.2.2",
@@ -31,6 +32,7 @@
     "lit": "^2.0.0-rc.2",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^1.4.1",
+    "puppeteer": "^10.1.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
